# obfuscation-atlas

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.circleci/: config.yml
obfuscation_atlas/: __init__.py  accelerate_config.yaml  config.py  detector_arch_presets.py  run.py
obfuscation_atlas/detectors/: blackbox.py  blackbox_elicitation_questions.csv  custom_dataset.py  dataset.py  evaluate.py  probe_archs.py  train.py
obfuscation_atlas/notebooks/: backdoored_model_evals_bow_probe.py  probe_evals.py
obfuscation_atlas/scripts/: generate_food_preference_dataset.py  generate_synthetic_mbpp.py  mbpp_generation_prompt.txt  mbpp_schema.json  mbpp_validation_prompt.txt  migrate_hf_collection.py  train_grpo_model_against_probe.py  train_reward_model.py  train_sft_against_probe.py  upload_to_huggingface.py
obfuscation_atlas/tasks/: code_generation.py  create_hardcoded_mbpp.py  emergent_misalignment.py  emergent_misalignment_autograder.py  strongreject.py  strongreject_autograder_script.py  strongreject_evaluator_prompt.txt  worker.py
obfuscation_atlas/training/: grpo_config.py  grpo_obfuscation_utils.py  grpo_trainer.py  label_smoothing_reward_trainer.py  obfuscation_loss.py  obfuscation_training.py  sft_trainer.py
obfuscation_atlas/utils/: 10.txt  activations.py  data_processing.py  example_types.py  generation.py  gpu_utils.py  languagemodelwrapper.py  lora_utils.py  masking.py  metrics.py  model_loading.py  plot_config.py  scoring.py  serialization.py  trigger_utils.py  violin_logit.py  violin_logit_gpt.py  visualization.py  wandb_api_cache_utils.py  wandb_utils.py
tests/: conftest.py  test_backdoor_training.py  test_custom_dataset.py  test_data_processing.py  test_detector_training.py  test_fsdp_training.py  test_resume_training.py  test_reward_function.py  test_rl_training.py
tests/tasks/: test_emergent_misalignment.py
